tests/testcases/invalid/09_bad_hex_escape_in_string.ciel
int main() {
    char* s = "\xz"; // bad hex escape
    return 0;
}
